[tool.poetry]
name = "s-raid"
version = "0.1.0"
description = ""
authors = ["K-Maxim <m.karpenko96@mail.ru>"]
readme = "README.md"
packages = [{include = "s_raid"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.5"
django-filter = "^22.1"
pytest-django = "^4.5.2"
pytest-factoryboy = "^2.5.1"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
